ACU-780: Seperating acume rpms for gms integration
Former-commit-id: e08a396a1d74eb8b592fa2e1a46066453ddf1742

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,13 @@ INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/GMSmoduleversion.cmake)
 
 if(PROD_FEATURE_DEV_ENV)
     set(CMAKE_INSTALL_PREFIX
-        ${PLATFORM_RPM_COMPONENTS}/acume-base)
+	   ${PLATFORM_RPM_COMPONENTS}/acume-base)
+    set(CMAKE_PHOENIX_ACUME_INSTALL_PREFIX
+        ${PLATFORM_RPM_COMPONENTS}/acume-base-phoenix)
 execute_process(COMMAND mkdir -p ${CMAKE_INSTALL_PREFIX})
+else()
+    set(CMAKE_PHOENIX_ACUME_INSTALL_PREFIX
+        ${CMAKE_INSTALL_PREFIX})
 endif()
 
 
@@ -27,8 +32,8 @@ add_dependencies(acume genjaxbforacume)
 install(CODE "execute_process(COMMAND chmod +x ${CMAKE_INSTALL_PREFIX}/opt/tms/acume/tomcat/bin/startup.sh)")
 install(CODE "execute_process(COMMAND chmod +x ${CMAKE_INSTALL_PREFIX}/opt/tms/acume/tomcat/bin/getUdfJarPaths.sh)")
 
-install(CODE "execute_process(COMMAND mkdir -p ${CMAKE_INSTALL_PREFIX}/modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/)")
-install(DIRECTORY Profiles/Default/ DESTINATION ${CMAKE_INSTALL_PREFIX}/modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/ FILES_MATCHING PATTERN "*.xml")
+install(CODE "execute_process(COMMAND mkdir -p ${CMAKE_PHOENIX_ACUME_INSTALL_PREFIX}/modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/)")
+install(DIRECTORY Profiles/Default/ DESTINATION ${CMAKE_PHOENIX_ACUME_INSTALL_PREFIX}/modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/ FILES_MATCHING PATTERN "*.xml")
 
 
 add_custom_target(acume_base_rpm
@@ -41,4 +46,16 @@ add_custom_target(acume_base_rpm
 ${PROD_OUTPUT_ROOT}/product-guavus-x86_64/build/release/build_version.sh
                   VERBATIM)
 
+add_custom_target(acume_base_phoenix_rpm
+                  WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}
+                  COMMAND make-rpm.sh
+                  -s ${CMAKE_CURRENT_SOURCE_DIR}/acume-base-phoenix.spec
+                  -r ${CMAKE_PHOENIX_ACUME_INSTALL_PREFIX}
+                  -o ${PLATFORM_RPM_REFLEX_DIR}
+                  -c
+${PROD_OUTPUT_ROOT}/product-guavus-x86_64/build/release/build_version.sh
+                  VERBATIM)
+
+
 add_dependencies(rpm acume_base_rpm)
+add_dependencies(rpm acume_base_phoenix_rpm)
