ACU-1148:define changePassword rest API cherry pick
Former-commit-id: feb4649233ca18f31538965baecb486ef180cd64

--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -196,6 +196,10 @@
         <servlet-name>RGService</servlet-name>
         <url-pattern>/queryresponse/logout</url-pattern>
     </servlet-mapping>
+     <servlet-mapping>
+        <servlet-name>RGService</servlet-name>
+        <url-pattern>/queryresponse/changePassword</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>60</session-timeout>
     </session-config>
