Revert "ACU-650: Release/platform5.3 merged with release/platform5.4"
This reverts commit b596e029337e6f77d670268b1b2f60c9dbd2d302 [formerly b68d27d97d5ebdb385c5291e0b8897d98de92225].


Former-commit-id: fbda5fe2c55c8097c12b55037177e4ceb73a8d17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,44 +1,24 @@
 INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/GMSmoduleversion.cmake)
 
-if(PROD_FEATURE_DEV_ENV)
-    set(CMAKE_INSTALL_PREFIX
-        ${PLATFORM_RPM_COMPONENTS}/acume-base)
-execute_process(COMMAND mkdir -p ${CMAKE_INSTALL_PREFIX})
-endif()
-
-
+add_subdirectory(cache)
 add_subdirectory(war)
+add_subdirectory(core)
 
 add_custom_target(acume
                   ALL
                   COMMAND ./pom.py ${SUPER_NAME}${SUPER_VERSION}
-                  COMMAND mvn clean install -DskipTests=true
+                  COMMAND mvn clean install -DskipTests=true 
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-
-install(DIRECTORY war/src/main/tomcat DESTINATION ${CMAKE_INSTALL_PREFIX}/opt/tms/acume)
+install(DIRECTORY war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
+install(DIRECTORY war/src/main/tomcat DESTINATION opt/tms/acume)
 
 add_custom_target(genjaxbforacume
-                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-                  COMMAND xjc -p com.guavus.acume.cache.gen -d cache/src/main/java/ cache/src/main/resources/cubedefinition.xsd)
-
+	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+	COMMAND xjc -p com.guavus.acume.cache.gen -d cache/src/main/java/ cache/src/main/resources/cubedefinition.xsd)
+	
 add_dependencies(acume genjaxbforacume)
-
 
 install(CODE "execute_process(COMMAND chmod +x ${CMAKE_INSTALL_PREFIX}/opt/tms/acume/tomcat/bin/startup.sh)")
 install(CODE "execute_process(COMMAND chmod +x ${CMAKE_INSTALL_PREFIX}/opt/tms/acume/tomcat/bin/getUdfJarPaths.sh)")
-
-install(CODE "execute_process(COMMAND mkdir -p ${CMAKE_INSTALL_PREFIX}/modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/)")
-install(DIRECTORY Profiles/Default/ DESTINATION ${CMAKE_INSTALL_PREFIX}/modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/ FILES_MATCHING PATTERN "*.xml")
-
-
-add_custom_target(acume_base_rpm
-                  WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}
-                  COMMAND make-rpm.sh
-                  -s ${CMAKE_CURRENT_SOURCE_DIR}/acume-base.spec
-                  -r ${CMAKE_INSTALL_PREFIX}
-                  -o ${PLATFORM_RPM_REFLEX_DIR}
-                  -c
-${PROD_OUTPUT_ROOT}/product-guavus-x86_64/build/release/build_version.sh
-                  VERBATIM)
-
-add_dependencies(rpm acume_base_rpm)
+install(CODE "execute_process(COMMAND mkdir -p modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/)")
+install(DIRECTORY Profiles/Default/ DESTINATION modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/ FILES_MATCHING PATTERN "*.xml")
