ACU-1101: First Set of Changes for Spark-1.5.2
Former-commit-id: f54f99cdbe181a2e4d996b628da680c9ef02fc35

--- a/war/src/main/resources/log4j-executor.properties
+++ b/war/src/main/resources/log4j-executor.properties
@@ -20,6 +20,7 @@ yarn.app.container.log.filesize=$CLI_REPLACE_EXECUTORLOGFILESIZE$
 yarn.app.container.log.backups=$CLI_REPLACE_EXECUTORLOGBACKUPS$
 
 log4j.appender.CLA=org.apache.hadoop.yarn.ContainerLogAppender
+log4j.appender.CLA.containerLogFile=${hadoop.root.logfile}
 log4j.appender.CLA.containerLogDir=${yarn.app.container.log.dir}
 log4j.appender.CLA.totalLogFileSize=${yarn.app.container.log.filesize}
 
@@ -39,3 +40,4 @@ log4j.appender.CRLA.layout.ConversionPattern=%d{ISO8601} %p [%t] %c: %m%n
 # Sends counts of logging messages at different severity levels to Hadoop Metrics.
 #
 log4j.appender.EventCounter=org.apache.hadoop.log.metrics.EventCounter
+
