--- a/war/pom.xml
+++ b/war/pom.xml
@@ -1,175 +1,181 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
-<groupId>com.guauvs</groupId>
-<artifactId>acume-war</artifactId>
-<version>0.1-SNAPSHOT</version>
-<packaging>war</packaging>
-<name>Acume-war</name>
-<url>http://maven.apache.org</url>
-<properties>
-<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-</properties>
-<dependencies>
-    <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>servlet-api-2.5</artifactId>
-      <version>6.1.14</version>
-      <scope>provided</scope>
-    </dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.guauvs</groupId>
+	<artifactId>acume-war</artifactId>
+	<version>0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>Acume-war</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>servlet-api-2.5</artifactId>
+			<version>6.1.14</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>acume.pcsa</groupId>
+			<artifactId>utility</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>acume.pcsa</groupId>
+			<artifactId>pcsaudf</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>apache</groupId>
+			<artifactId>libthrift</artifactId>
+			<version>0.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.guavus.acume</groupId>
+			<artifactId>core</artifactId>
+			<version>platform5.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.spark</groupId>
+					<artifactId>spark-core_2.10</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.spark</groupId>
+					<artifactId>spark-sql_2.10</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.spark</groupId>
+					<artifactId>spark-hive_2.10</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>log4j-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>apache</groupId>
+  					<artifactId>libthrift</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>user-management</groupId>
+			<artifactId>user-management</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>war</type>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>asm</groupId>
+					<artifactId>asm</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.jersey</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>log4j-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>apache</groupId>
+  					<artifactId>libthrift</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm-all</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.5.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.5.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-jaxrs</artifactId>
+			<version>1.5.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-xc</artifactId>
+			<version>1.5.5</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 
-    <dependency>
-    	<groupId>acume.pcsa</groupId>
-    	<artifactId>utility</artifactId>
-    	<version>0.1</version>
-	</dependency>
-    <dependency>
-    	<groupId>acume.pcsa</groupId>
-    	<artifactId>pcsaudf</artifactId>
-    	<version>0.1</version>
-	</dependency>
+	<build>
+		<plugins>
+			<!-- put aside some unwanted jars from war... -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<overlays>
+						<overlay>
+							<groupId>user-management</groupId>
+							<artifactId>user-management</artifactId>
+							<excludes>
+								<exclude>WEB-INF/lib/log4j-*.jar</exclude>
+								<exclude>WEB-INF/lib/servlet-api*.jar</exclude>
+								<exclude>WEB-INF/lib/guava*.jar</exclude>
+								<exclude>WEB-INF/lib/jasper-compiler*.jar</exclude>
+								<exclude>WEB-INF/lib/jasper-runtime*.jar</exclude>
+								<exclude>WEB-INF/lib/xercesImpl*.jar</exclude>
+								<exclude>WEB-INF/lib/xml-apis*.jar</exclude>
+								<exclude>WEB-INF/lib/logback-*.jar</exclude>
+								<exclude>WEB-INF/lib/jackson-*.jar</exclude>
+								<exclude>WEB-INF/lib/libthrift-0.9.0.jar</exclude>
+							</excludes>
+						</overlay>
 
-<dependency>
-<groupId>com.guavus.acume</groupId>
-<artifactId>core</artifactId>
-<version>platform5.2</version>
-<exclusions>
-	<exclusion>
-		<groupId>org.apache.spark</groupId>
-                <artifactId>spark-core_2.10</artifactId>		
-	</exclusion>
-	<exclusion>
-		<groupId>org.apache.spark</groupId>
-                <artifactId>spark-sql_2.10</artifactId>
-	</exclusion>
-	<exclusion>
-		<groupId>org.apache.spark</groupId>
-                <artifactId>spark-hive_2.10</artifactId>		
-	</exclusion>
-	<exclusion>
-                 <groupId>org.slf4j</groupId>
-                 <artifactId>log4j-over-slf4j</artifactId>
-        </exclusion>
-        <exclusion>
-                 <groupId>org.apache.logging.log4j</groupId>
-                 <artifactId>log4j-core</artifactId>
-        </exclusion>
-        <exclusion>
-                 <groupId>log4j</groupId>
-                 <artifactId>log4j</artifactId>
-        </exclusion>
-</exclusions>
-</dependency>
-<dependency>
-                        <groupId>user-management</groupId>
-                        <artifactId>user-management</artifactId>
-                        <version>1.0-SNAPSHOT</version>
-                        <type>war</type>
-                        <exclusions>
-                                <exclusion>
-                                        <groupId>javax.servlet</groupId>
-                                        <artifactId>servlet-api</artifactId>
-                                </exclusion>
-                                <exclusion>
-                                        <groupId>com.google.guava</groupId>
-                                        <artifactId>guava</artifactId>
-                                </exclusion>
-                                <exclusion>
-                                        <groupId>asm</groupId>
-                                        <artifactId>asm</artifactId>
-                                </exclusion>
-                				<exclusion>
-                					<groupId>com.sun.jersey</groupId>
-                					<artifactId>*</artifactId>
-                				</exclusion>
-                				<exclusion>
-                               			<groupId>org.slf4j</groupId>
-                                		<artifactId>log4j-over-slf4j</artifactId>
-                        		</exclusion>
-                        		<exclusion>
-                                		<groupId>org.apache.logging.log4j</groupId>
-                                		<artifactId>log4j-core</artifactId>
-                        		</exclusion>
-                        		<exclusion>
-                                		<groupId>log4j</groupId>
-                                		<artifactId>log4j</artifactId>
-                        		</exclusion>
-                                </exclusions>
-                </dependency>
-<dependency>
-	<groupId>asm</groupId>
-	<artifactId>asm-all</artifactId>
-	<version>3.3.1</version>
-</dependency>
+					</overlays>
 
-<dependency>
-    <groupId>org.codehaus.jackson</groupId>
-  <artifactId>jackson-mapper-asl</artifactId>
-  <version>1.5.5</version>
-  <scope>provided</scope>
-</dependency>
-
-
-<dependency>
-    <groupId>org.codehaus.jackson</groupId>
-  <artifactId>jackson-core-asl</artifactId>
-  <version>1.5.5</version>
-  <scope>provided</scope>
-</dependency>
- 
-
-<dependency>
-    <groupId>org.codehaus.jackson</groupId>
-  <artifactId>jackson-jaxrs</artifactId>
-  <version>1.5.5</version>
-  <scope>provided</scope>
-</dependency>
- 
-
-<dependency>
-    <groupId>org.codehaus.jackson</groupId>
-  <artifactId>jackson-xc</artifactId>
-  <version>1.5.5</version>
-  <scope>provided</scope>
-</dependency>
-  
-
-</dependencies>
-
-<build>
-    <plugins>
-        <!-- put aside some unwanted jars from war...-->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>2.1.1</version>
-            <configuration>
-                <overlays>
-                    <overlay>
-                        <groupId>user-management</groupId>
-                        <artifactId>user-management</artifactId>
-                        <excludes>
-        					 <exclude>WEB-INF/lib/log4j-*.jar</exclude>  
-                             <exclude>WEB-INF/lib/servlet-api*.jar</exclude>
-    						 <exclude>WEB-INF/lib/guava*.jar</exclude>
-                             <exclude>WEB-INF/lib/jasper-compiler*.jar</exclude>
-                             <exclude>WEB-INF/lib/jasper-runtime*.jar</exclude>
-                             <exclude>WEB-INF/lib/xercesImpl*.jar</exclude>
-                             <exclude>WEB-INF/lib/xml-apis*.jar</exclude>
-    	                     <exclude>WEB-INF/lib/logback-*.jar</exclude>
-                           <exclude>WEB-INF/lib/jackson-*.jar</exclude>
-                        </excludes>
-                    </overlay>
-
-                </overlays>
-
-            </configuration>
-        </plugin>
-</plugins>
-</build>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
