--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -36,6 +36,7 @@ acume.global.default.datasource					$CLI_REPLACE_ACUMEDEFAULTDATASOURCE$
 acume.global.scheduler.cacheavailabilitymapupdatepolicy		$CLI_REPLACE_ACUMECORECACHEAVAILABILITYMAPPOLICY$
 acume.global.sql.corrector 					$CLI_REPLACE_ACUMESQLCORRECTOR$
 acume.global.sql.parser 					$CLI_REPLACE_ACUMESQLPARSER$
+acume.global.thrift.isRawQuery  				$CLI_REPLACE_ACUMETHRIFTISRAWQUERY$
 
 
 ;Values specific to cache. Variable names start with CACHE
