MAP-11991: Include contextParam shiroEnvironmentClass in web.xml for all apps
Former-commit-id: 0bbf14575a2355e848cfc91b1b5d891304409367

--- a/core/src/main/webapp/WEB-INF/web.xml
+++ b/core/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,10 @@
 		<listener-class>flex.messaging.HttpFlexSession</listener-class>
 	</listener>
 
+<context-param>
+    <param-name>shiroEnvironmentClass</param-name>
+    <param-value>com.guavus.rubix.user.shiro.StaticSecurityManagerIniWebEnvironment</param-value>
+</context-param>
 	<filter>
 		<filter-name>SessionFilter</filter-name>
 		<filter-class>com.guavus.acume.core.servletfilters.SessionFilter</filter-class>
