SI-98: excluding spark-hbase, spark-unsafe jars
Former-commit-id: 4e71d6700289ab78716358e9e9a2e603453b7cb7

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -73,6 +73,14 @@
 					<groupId>apache</groupId>
   					<artifactId>libthrift</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.apache.spark</groupId>
+					<artifactId>spark-hbase_2.10</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.spark</groupId>
+					<artifactId>spark-unsafe_2.10</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
